"Fix: Force IPv4 for OpenAI connection